--- a/index.html
+++ b/index.html
@@ -344,6 +344,10 @@ color: #46a3ff;
         Previous Chairs
     </h4>
     <ul align="left">
+
+<li><a href="https://ecs.victoria.ac.nz/Main/HarithAl-Sahaf">Harith Al-Sahaf</a>,Victoria University of Wellington (<strong>Chair, 2021-2024</strong>)
+        </li> 
+
 <li><a href="https://www.ugr.es/~pmesejo/">Pablo Mesejo</a>,University of Granada Spain (<strong>Chair, 2017-2021</strong>)
         </li> 
 
